@@ -19,6 +19,8 @@
     <servlet.version>3.1.0</servlet.version>
     <resty.version>${parent.version}</resty.version>
     <mysql.version>5.1.33</mysql.version>
+    <slf4j.version>1.7.7</slf4j.version>
+    <logback.version>1.1.2</logback.version>
   </properties>
 
   <dependencies>
@@ -53,6 +55,20 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>resty-example</finalName>
@@ -72,6 +88,30 @@
             <version>${mysql.version}</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.1.1.v20140108</version>
+        <configuration>
+          <stopKey>foo</stopKey>
+          <stopPort>9091</stopPort>
+          <jvmArgs>-Xmx1024m -Xms256m -XX:PermSize=256M -XX:MaxPermSize=512M</jvmArgs>
+          <scanIntervalSeconds>6</scanIntervalSeconds>
+          <httpConnector>
+            <port>9099</port>
+          </httpConnector>
+          <webAppConfig>
+            <contextPath>/</contextPath>
+            <!--<defaultsDescriptor>${basedir}/src/main/resources/webdefault.xml</defaultsDescriptor>-->
+          </webAppConfig>
+          <systemProperties>
+            <systemProperty>
+              <name>org.eclipse.util.URI.charset</name>
+              <value>UTF-8</value>
+            </systemProperty>
+          </systemProperties>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
